[package]
name = "next"
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
static_assertions = { workspace = true }

[features]
default = ["sqlx/runtime-tokio-rustls"]
migrate = ["sqlx/macros", "sqlx/migrate"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]