[package]
name = "next"
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
include-utils = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
const_format = "0.2.35"
const-random = "0.1"
maybe-once = { workspace = true }
rand = { workspace = true }
static_assertions = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

[features]
default = ["sqlx/runtime-tokio-rustls"]
migrate = ["sqlx/macros", "sqlx/migrate"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]